--- a/package.json
+++ b/package.json
@@ -4,15 +4,30 @@
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.97",
+        "@reduxjs/toolkit": "^2.2.1",
         "@types/react": "^18.3.2",
         "@types/react-dom": "^18.3.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "@testing-library/react": "^14.1.2",
+        "@types/i18n-js": "^3.8.4",
+        "@types/jest": "^29.5.11",
+        "@types/lodash": "^4.14.191",
+        "@types/node": "^20.5.9",
+        "@types/styled-components": "^5.1.29",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0",
+        "react-router-dom": "^6.17.0",
         "react-scripts": "5.0.1",
+        "redux": "^5.0.1",
+        "redux-observable": "^3.0.0-rc.2",
+        "redux-persist": "^6.0.0",
+        "redux-preboiled": "0.5.1",
+        "rxjs": "^7.8.1",
+        "styled-components": "^6.1.0",
+        "babel-plugin-lodash": "^3.3.4",
+        "babel-plugin-styled-components": "^2.1.4",
+        "polished": "^4.2.2",
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4",
         "axios": "^1.6.2"
