--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
         "@types/lodash": "^4.14.191",
         "@types/node": "^20.5.9",
         "@types/styled-components": "^5.1.29",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/icons-material": "^5.10.16",
+        "@mui/material": "^5.10.17",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
@@ -26,8 +30,11 @@
         "styled-components": "^6.1.0",
         "babel-plugin-lodash": "^3.3.4",
         "babel-plugin-styled-components": "^2.1.4",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^2.1.4",
         "polished": "^4.2.2",
         "typescript": "^4.9.5",
+        "usehooks-ts": "^2.9.1",
         "web-vitals": "^2.1.4",
         "axios": "^1.6.2"
     },
