--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "songsappfrontend",
     "version": "0.1.0",
     "private": true,
+    "jest": {
+        "verbose": true
+    },
     "dependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/user-event": "^13.5.0",
@@ -18,6 +21,10 @@
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.10.16",
         "@mui/material": "^5.10.17",
+        "@babel/core": "7.22.5",
+        "@babel/eslint-parser": "7.22.5",
+        "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+        "@babel/preset-env": "7.22.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
@@ -36,12 +43,22 @@
         "typescript": "^4.9.5",
         "usehooks-ts": "^2.9.1",
         "web-vitals": "^2.1.4",
-        "axios": "^1.6.2"
+        "axios": "^1.6.2",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-junit": "^16.0.0",
+        "prettier": "^2.8.3",
+        "react-app-rewired": "^2.2.1",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "eslint": "^8.52.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-plugin-jest-dom": "^5.1.0",
+        "eslint-plugin-prettier": "^3.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest --config ./jest.config.ts",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
